--- a/iitprep.css
+++ b/iitprep.css
@@ -23,7 +23,7 @@ header h1 {
     background-color: #262626;
     color: #2196f3;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     padding: 30px 40px;
@@ -45,11 +45,12 @@ header h1 {
     background-color: #cccc;
 }
 .columns {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    justify-content: space-around;
+    display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    row-gap: 50px;
+    flex-flow: row;
+    flex-wrap: wrap;
+    flex-basis: auto;
 }
 .card {
     display: block;
